@@ -12,8 +12,8 @@ import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
-import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderCall;
+import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -31,7 +31,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class AdkernelBidder implements Bidder<BidRequest> {
 
@@ -66,7 +65,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
         final BidRequest.BidRequestBuilder requestBuilder = request.toBuilder();
         final List<HttpRequest<BidRequest>> httpRequests = pubToImps.entrySet().stream()
                 .map(extAndImp -> createHttpRequest(extAndImp, requestBuilder, request.getSite(), request.getApp()))
-                .collect(Collectors.toList());
+                .toList();
 
         return Result.of(httpRequests, errors);
     }
@@ -183,7 +182,7 @@ public class AdkernelBidder implements Bidder<BidRequest> {
                 .map(SeatBid::getBid)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidType getType(String impId, List<Imp> imps) {
