@@ -16,8 +16,8 @@ import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
-import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderCall;
+import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -34,7 +34,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class BeintooBidder implements Bidder<BidRequest> {
 
@@ -76,7 +75,7 @@ public class BeintooBidder implements Bidder<BidRequest> {
 
         final List<Imp> modifiedImps = request.getImp().stream()
                 .map(imp -> modifyImp(imp, isSecure, parseAndValidateImpExt(imp)))
-                .collect(Collectors.toList());
+                .toList();
 
         return request.toBuilder()
                 .imp(modifiedImps)
@@ -197,6 +196,6 @@ public class BeintooBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> bid.toBuilder().impid(bid.getId()).build())
                 .map(bid -> BidderBid.of(bid, BidType.banner, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
